--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ WorkingScripts/get_seismic_design_code.py
 WorkingScripts/join_seis_code.py
 WorkingScripts/o4_Earthquake_GetHazusStructureType.py
 OriginalScripts.zip
+Data/*
 
 # temp files
 tmp/*
