--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,7 @@ WorkingScripts/join_seis_code.py
 WorkingScripts/o4_Earthquake_GetHazusStructureType.py
 OriginalScripts.zip
 Data/*
-
+WorkingScripts/Data/*
 # temp files
 tmp/*
 ShakeMaps_Testing/*
